service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dream-games-service
spec:
  selector:
    app: dream-games
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
