ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dream-games-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Add this line
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dream-games-service
            port:
              number: 80
